--- a/app/src/main/res/layout/incl_title_value_smol.xml
+++ b/app/src/main/res/layout/incl_title_value_smol.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
     <TextView
         android:id="@+id/TV_incl_titvalsmol_tit"
-        android:layout_width="128dp"
+        android:layout_width="64dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:text="TextView"
         android:textColor="@color/DRK_TXT"
         android:textSize="16sp"
@@ -22,7 +22,7 @@
 
     <TextView
         android:id="@+id/TV_incl_titvalsmol_val"
-        android:layout_width="196dp"
+        android:layout_width="96dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="TextView"
