--- a/app/src/main/res/layout/activity_plant_roll.xml
+++ b/app/src/main/res/layout/activity_plant_roll.xml
@@ -16,11 +16,11 @@
         android:text="cheese"
         android:textColor="@color/DRK_TXT_INV"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/TV_deadplant_cntcnt" />
+        app:layout_constraintEnd_toStartOf="@+id/BTN_plantroll_anim"
+        app:layout_constraintStart_toEndOf="@+id/TV_plantroll_cnt" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RCLV_deadplants"
+        android:id="@+id/RCLV_plantroll"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/TV_deadplant_cntcnt"
+        android:id="@+id/TV_plantroll_cnt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -38,5 +38,15 @@
         android:textColor="@color/DRK_TXT"
         app:layout_constraintBottom_toBottomOf="@+id/BTN_plantroll_addphoto"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/BTN_plantroll_addphoto" />
+
+    <Button
+        android:id="@+id/BTN_plantroll_anim"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:text="Schnecke"
+        app:layout_constraintBottom_toBottomOf="@+id/BTN_plantroll_addphoto"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/BTN_plantroll_addphoto" />
 </androidx.constraintlayout.widget.ConstraintLayout>
