ui improvements, bugfixes

--- a/app/src/main/res/layout/dlg_defineplant.xml
+++ b/app/src/main/res/layout/dlg_defineplant.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/DRK_BG_SHADE"
+    android:clickable="true"
     android:scrollbars="vertical">
 
     <com.google.android.material.chip.Chip
