--- a/app/src/main/res/layout/spnitm_lifecycle.xml
+++ b/app/src/main/res/layout/spnitm_lifecycle.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/TV_spnitm_lifecycle_name"
-    android:layout_width="match_parent"
+    android:layout_width="@dimen/LIFECYC_SPN_WIDTH"
     android:layout_height="wrap_content"
-    android:background="@color/DRK_BG_MAIN"
+    android:background="@color/DRK_BG_SHADE"
     android:padding="8dp"
     android:textColor="@color/DRK_TXT"
     android:textSize="20sp"
