--- a/app/src/main/res/layout/activity_plant.xml
+++ b/app/src/main/res/layout/activity_plant.xml
@@ -22,9 +22,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/almendra_display"
         android:text="TextView"
         android:textColor="@color/DRK_TXT"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
