--- a/app/src/main/res/layout/grditm_deadplant.xml
+++ b/app/src/main/res/layout/grditm_deadplant.xml
@@ -13,10 +13,13 @@
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
         android:background="@color/DRK_BG_MAIN"
+        android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
         android:textColor="@color/DRK_TXT"
+        android:textStyle="bold"
+        android:typeface="monospace"
         app:layout_constraintEnd_toEndOf="@+id/IV_grditm_deadplant_photo"
         app:layout_constraintStart_toStartOf="@+id/IV_grditm_plantroll_photo"
         app:layout_constraintTop_toBottomOf="@+id/IV_grditm_deadplant_photo" />
@@ -26,10 +29,12 @@
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
         android:background="@color/DRK_BG_MAIN"
+        android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
         android:textColor="@color/DRK_TXT"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_deadplant_name"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_deadplant_name"
         app:layout_constraintTop_toBottomOf="@+id/TV_grditm_deadplant_name" />
@@ -39,10 +44,12 @@
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
         android:background="@color/DRK_BG_MAIN"
+        android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
         android:textColor="@color/DRK_TXT"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_deadplant_type"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_deadplant_type"
         app:layout_constraintTop_toBottomOf="@+id/TV_grditm_deadplant_type" />
@@ -52,10 +59,12 @@
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
         android:background="@color/DRK_BG_MAIN"
+        android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
         android:textColor="@color/DRK_TXT"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_deadplant_timeframe"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_deadplant_timeframe"
         app:layout_constraintTop_toBottomOf="@+id/TV_grditm_deadplant_timeframe" />
@@ -65,10 +74,12 @@
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
         android:background="@color/DRK_BG_MAIN"
+        android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
         android:textColor="@color/DRK_TXT"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/IV_grditm_deadplant_photo"
         app:layout_constraintStart_toStartOf="@+id/IV_grditm_deadplant_photo"
         app:layout_constraintTop_toBottomOf="@+id/TV_grditm_deadplant_cod" />
@@ -89,6 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/DRK_ACC1"
+        android:fontFamily="casual"
         android:text="goodbye"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
