--- a/app/src/main/res/layout/grditm_plant.xml
+++ b/app/src/main/res/layout/grditm_plant.xml
@@ -13,8 +13,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="8dp"
         android:clickable="true"
-        android:src="@android:drawable/ic_menu_edit"
-        android:tint="#00BCD4"
+        android:src="@drawable/acticon_edit"
+        app:tint="@color/DRK_TXT"
         app:backgroundTint="@color/DRK_ACC1"
         app:fabCustomSize="32dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,10 +26,12 @@
         android:layout_width="96dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/almendra_display"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/DRK_TXT"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/IV_grditm_plant_profpic" />
 
@@ -38,9 +40,11 @@
         android:layout_width="96dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/almendra_display"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/DRK_TXT"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_plant_name"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_plant_name"
         app:layout_constraintTop_toBottomOf="@+id/TV_grditm_plant_name" />
@@ -51,7 +55,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:clickable="true"
-        android:src="@android:drawable/ic_delete"
+        android:src="@drawable/acticon_delete"
+        app:tint="@color/DRK_TXT"
         app:backgroundTint="@color/DRK_ACC1"
         app:fabCustomSize="32dp"
         app:layout_constraintEnd_toEndOf="@+id/FAB_grditm_plant_edit"
