--- a/app/src/main/res/layout/incl_title_value_smol.xml
+++ b/app/src/main/res/layout/incl_title_value_smol.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/almendra_display"
         android:text="TextView"
         android:textColor="@color/DRK_TXT"
         android:textSize="16sp"
@@ -25,6 +26,7 @@
         android:layout_width="96dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/almendra_display"
         android:text="TextView"
         android:textColor="@color/DRK_TXT"
         android:textSize="16sp"
