--- a/app/src/main/res/layout/grditm_plant.xml
+++ b/app/src/main/res/layout/grditm_plant.xml
@@ -30,7 +30,7 @@
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/DRK_TXT"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/IV_grditm_plant_profpic" />
@@ -44,7 +44,7 @@
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/DRK_TXT"
-        android:textStyle="italic"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_plant_name"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_plant_name"
         app:layout_constraintTop_toBottomOf="@+id/TV_grditm_plant_name" />
