--- a/app/src/main/res/layout/incl_title_value.xml
+++ b/app/src/main/res/layout/incl_title_value.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
-        android:fontFamily="@font/almendra_display"
+        android:fontFamily="@font/almendra"
         android:text="TextView"
         android:textColor="@color/DRK_TXT"
         android:textSize="16sp"
@@ -27,7 +27,7 @@
         android:layout_width="196dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:fontFamily="@font/almendra_display"
+        android:fontFamily="@font/almendra"
         android:text="TextView"
         android:textColor="@color/DRK_TXT"
         android:textSize="16sp"
