--- a/app/src/main/res/layout/grditm_plant.xml
+++ b/app/src/main/res/layout/grditm_plant.xml
@@ -72,4 +72,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <ImageView
+        android:id="@+id/IV_grditm_plant_overlay"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:padding="2dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/TV_grditm_plant_act"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:fontFamily="@font/almendra"
+        android:text="foobar"
+        android:textColor="@color/DRK_TXT"
+        android:textSize="14sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/IV_grditm_plant_profpic"
+        app:layout_constraintEnd_toEndOf="@+id/IV_grditm_plant_overlay"
+        app:layout_constraintStart_toStartOf="@+id/IV_grditm_plant_overlay" />
 </androidx.constraintlayout.widget.ConstraintLayout>
